Обработал img в сковше

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
        <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ</h2>
       <ul>
           <li>
-              <img src="./images/img(1).jpg" alt="Программирование" width="370">
+              <img src="./images/img (1).jpg" alt="Программирование" width="370">
           </li>
           <li>
-              <img src="./images/img(2).jpg" alt="Мобильные приложения" width="370">
+              <img src="./images/img (2).jpg" alt="Мобильные приложения" width="370">
           </li>
           <li>
-              <img src="/images/img(3).jpg" alt="Графический дизайн" width="370">
+              <img src="./images/img (3).jpg"  alt="Графический дизайн" width="370">
           </li>
       </ul>
 </section>
@@ -67,22 +67,22 @@
     <h2>Наша команда</h2>
     <ul>
 <li>
-    <img src="./images/img(4).jpg" alt="Игорь Демьяненко">
+    <img src="/images/img (4).jpg" alt="Игорь Демьяненко">
     <H3>Игорь Демьяненко</H3>
     <p>Product Designer</p>
 </li>
 <li>
-   <img src="./images/img(5).jpg" alt="Ольга Репина">
+   <img src="./images/img (5).jpg" alt="Ольга Репина">
    <h3>Ольга Репина</h3>
    <p>Frontend Developer</p>
 </li>
 <li>
-    <img src="./images/img(6).jpg" alt="Николай Тарасова">
+    <img src="./images/img (6).jpg" alt="Николай Тарасова">
     <h3>Николай Тарасова</h3>
     <p>Marketing</p>
 </li>
 <li>
-    <img src="./images/img(7).jpg" alt="Михаил Ермаков">
+    <img src="./images/img (7).jpg" alt="Михаил Ермаков">
     <h3>Михаил Ермаков</h3>
     <p>UI Designer</p>
 </li>
