--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
        <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ</h2>
       <ul>
           <li>
-              <img src="./images/img (1).jpg" alt="Программирование" width="370">
+              <img src="./images/img(1).jpg" alt="Программирование" width="370">
           </li>
           <li>
-              <img src="./images/img (2).jpg" alt="Мобильные приложения" width="370">
+              <img src="./images/img(2).jpg" alt="Мобильные приложения" width="370">
           </li>
           <li>
-              <img src="./images/img (3).jpg"  alt="Графический дизайн" width="370">
+              <img src="./images/img(3).jpg"  alt="Графический дизайн" width="370">
           </li>
       </ul>
 </section>
@@ -67,22 +67,22 @@
     <h2>Наша команда</h2>
     <ul>
 <li>
-    <img src="/images/img (4).jpg" alt="Игорь Демьяненко">
-    <H3>Игорь Демьяненко</H3>
+    <img src="./images/img(4).jpg" alt="Игорь Демьяненко" width="270">
+    <h3>Игорь Демьяненко</h3>
     <p>Product Designer</p>
 </li>
 <li>
-   <img src="./images/img (5).jpg" alt="Ольга Репина">
+   <img src="./images/img(5).jpg" alt="Ольга Репина" width="270">
    <h3>Ольга Репина</h3>
    <p>Frontend Developer</p>
 </li>
 <li>
-    <img src="./images/img (6).jpg" alt="Николай Тарасова">
+    <img src="./images/img(6).jpg" alt="Николай Тарасова" width="270">
     <h3>Николай Тарасова</h3>
     <p>Marketing</p>
 </li>
 <li>
-    <img src="./images/img (7).jpg" alt="Михаил Ермаков">
+    <img src="./images/img(7).jpg" alt="Михаил Ермаков" width="270">
     <h3>Михаил Ермаков</h3>
     <p>UI Designer</p>
 </li>
@@ -90,6 +90,7 @@
 </section>
 </main>
 <footer>
+     <a href=""><span>WebS tudio</span>
     <address>
         <ul>
             <li><a href="https://www.google.com/maps/search/%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82+%D0%BB%D0%B5%D1%81%D0%B8+%D1%83%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8+26/@50.4728094,30.4184101,12z/data=!3m1!4b1">г.Киев пр-т Леси Украинки,26</a></li>
@@ -97,6 +98,7 @@
             <li><a href="tel:+380991111111">+380991111111</a></li>
         </ul>
     </address>
+
 </footer>
 </body>
 </html>
